Fixed numerous styling issue including icons, projectList overflow and cards, intro animation, and navbar link backgrounds

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -44,8 +44,8 @@
 }
 
 .c-icon {
-    width: 30px;
-    height: 30px;
+    width: 75px;
+    height: 75px;
     padding: 15px;
 }
 
