--- a/src/components/projectList/projectList.css
+++ b/src/components/projectList/projectList.css
@@ -6,6 +6,7 @@
     color: #61dafb;
     padding: 100px 100px;
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     align-items: center;
     text-align: center;
